--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -1,11 +1,28 @@
+<!DOCTYPE html>
 <html>
-</html>
 <head>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shop</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
 </head>
-
 <body>
-<h1>Test</h1>
+    <header>
+            <nav>
+                <input type="checkbox" id="check">    
+                <label for="check">
+                    <i class="fas fa-bars" id="btn"></i>
+                </label>
+                <img src="placeholder.jpg">
+                <ul>
+                    <li><a href="#" class="item">Products</a></li>
+                    <li><a href="#" class="item">Contact</a></li>
+                    <li><a href="#" class = "item">Shopping Cart</a></li>
+                </ul>
+            </nav>
+    </header>
 </body>
 
 </html>
