--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -15,7 +15,7 @@
                 <label for="check">
                     <i class="fas fa-bars" id="btn"></i>
                 </label>
-                <img src="placeholder.jpg">
+                <img src="fitpointer_logo.jpg">
                 <ul>
                     <li><a href="#" class="item">Products</a></li>
                     <li><a href="#" class="item">Contact</a></li>
