--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -19,8 +19,12 @@
                 <ul>
                     <li><a href="#" class="item">Products</a></li>
                     <li><a href="#" class="item">Contact</a></li>
-                    <li><a href="#" class = "item">Shopping Cart</a></li>
+                    <li><a href="#" class = "item">About us</a></li>
                 </ul>
+                <div class="icontainer">
+                    <img src="shopping_cart_icon.png" class="icons">
+                    <img src="user_icon.png" class="icons">
+                </div>
             </nav>
     </header>
 </body>
