--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -27,6 +27,21 @@
                 </div>
             </nav>
     </header>
+    <div class="container">
+        <div class="left-container">
+            <article>
+                <h1>Revolutionary protein for working out</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus feugiat et arcu in fermentum. 
+                    Sed porta euismod nibh, vitae pretium sapien bibendum sit amet. Curabitur in accumsan tellus. 
+                    Sed quis risus elit. Integer faucibus sed enim sit amet aliquet. Donec scelerisque vehicula imperdiet. 
+                    Donec orci risus, sagittis nec lacus non, ornare laoreet lacus.</p>
+                <button href="#">SHOP</button>
+            </article>
+        </div>
+        <div class="right-container">
+            <img src="placeholder.jpg" class="picture">
+        </div>
+    </div>
 </body>
 
 </html>
