--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -40,6 +40,12 @@
         </div>
         <div class="right-container">
             <img src="placeholder.jpg" class="picture">
+            <div class="mobile">
+                <article>
+                    <h1 class="mobile" id="text">Revolutionary protein for working out</h1>
+                    <button href="#">SHOP</button> 
+                </article>
+            </div>
         </div>
     </div>
 </body>
