file structuur aangepast

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
                 <label for="check">
                     <i class="fas fa-bars" id="btn"></i>
                 </label>
-                <img src="fitpointer_logo.jpg" class="logo">
+                <img src="Fotos/fitpointer_logo.jpg" class="logo">
                 <ul>
                     <li><a href="#" class="item">Products</a></li>
                     <li><a href="#" class="item">Contact</a></li>
                     <li><a href="#" class = "item">About us</a></li>
                 </ul>
                 <div class="icontainer">
-                    <img src="shopping_cart_icon.png" class="icons">
-                    <img src="user_icon.png" class="icons">
+                    <img src="Fotos/shopping_cart_icon.png" class="icons">
+                    <img src="Fotos/user_icon.png" class="icons">
                 </div>
             </nav>
     </header>
@@ -39,7 +39,7 @@
             </article>
         </div>
         <div class="right-container">
-            <img src="placeholder.jpg" class="picture">
+            <img src="Fotos/placeholder.jpg" class="picture">
             <div class="mobile">
                 <article>
                     <h1 class="mobile" id="text">Revolutionary protein for working out</h1>
