--- a/about.html
+++ b/about.html
@@ -15,9 +15,7 @@
                 <label for="check">
                     <i class="fas fa-bars" id="btn"></i>
                 </label>
-                <a href="index.html">
-                    <img src="fotos/fitpointer_logo.jpg" class="logo" onclick="window.loaction.href='index.html';">
-                </a>
+                <img src="fotos/fitpointer_logo.jpg" class="logo">
                 <ul>
                     <li><a href="products.html" class="item">Products</a></li>
                     <li><a href="contact.html" class="item">Contact</a></li>
