--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -15,15 +16,15 @@
                 <label for="check">
                     <i class="fas fa-bars" id="btn"></i>
                 </label>
-                <img src="Fotos/fitpointer_logo.jpg" class="logo">
+                <img src="fotos/fitpointer_logo.jpg" class="logo">
                 <ul>
-                    <li><a href="#" class="item">Products</a></li>
-                    <li><a href="#" class="item">Contact</a></li>
-                    <li><a href="#" class = "item">About us</a></li>
+                    <li><a href="products.html" class="item">Products</a></li>
+                    <li><a href="about.html" class="item">Contact</a></li>
+                    <li><a href="contact.html" class = "item">About us</a></li>
                 </ul>
                 <div class="icontainer">
-                    <img src="Fotos/shopping_cart_icon.png" class="icons">
-                    <img src="Fotos/user_icon.png" class="icons">
+                    <img src="fotos/shopping_cart_icon.png" class="icons">
+                    <img src="fotos/user_icon.png" class="icons">
                 </div>
             </nav>
     </header>
@@ -35,15 +36,15 @@
                     Sed porta euismod nibh, vitae pretium sapien bibendum sit amet. Curabitur in accumsan tellus. 
                     Sed quis risus elit. Integer faucibus sed enim sit amet aliquet. Donec scelerisque vehicula imperdiet. 
                     Donec orci risus, sagittis nec lacus non, ornare laoreet lacus.</p>
-                <button href="#">SHOP</button>
+                <button onclick="window.location.href='products.html';">SHOP</button>
             </article>
         </div>
         <div class="right-container">
-            <img src="Fotos/placeholder.jpg" class="picture">
+            <img src="fotos/placeholder.jpg" class="picture">
             <div class="mobile">
                 <article>
                     <h1 class="mobile" id="text">Revolutionary protein for working out</h1>
-                    <button href="#">SHOP</button> 
+                    <button onmousedown="window.location.href='products.html'; console.log('kas')">SHOP</button>
                 </article>
             </div>
         </div>
