--- a/about.html
+++ b/about.html
@@ -15,9 +15,11 @@
                 <label for="check">
                     <i class="fas fa-bars" id="btn"></i>
                 </label>
-                <img src="fotos/fitpointer_logo.jpg" class="logo">
+                <a href="index.html">
+                    <img src="fotos/fitpointer_logo.jpg" class="logo" onclick="window.loaction.href='index.html';">
+                </a>
                 <ul>
-                    <li><a href="products.html" class="item">Products</a></li>
+                    <li><a href="products.php" class="item">Products</a></li>
                     <li><a href="contact.html" class="item">Contact</a></li>
                     <li><a href="about.html" class = "item">About us</a></li>
                 </ul>
