--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
                 <label for="check">
                     <i class="fas fa-bars" id="btn"></i>
                 </label>
-                <img src="fotos/fitpointer_logo.jpg" class="logo">
+                <a href="index.html">
+                    <img src="fotos/fitpointer_logo.jpg" class="logo" onclick="window.loaction.href='index.html';">
+                </a>
                 <ul>
-                    <li><a href="products.html" class="item">Products</a></li>
+                    <li><a href="products.php" class="item">Products</a></li>
                     <li><a href="about.html" class="item">Contact</a></li>
                     <li><a href="contact.html" class = "item">About us</a></li>
                 </ul>
@@ -36,7 +38,7 @@
                     Sed porta euismod nibh, vitae pretium sapien bibendum sit amet. Curabitur in accumsan tellus. 
                     Sed quis risus elit. Integer faucibus sed enim sit amet aliquet. Donec scelerisque vehicula imperdiet. 
                     Donec orci risus, sagittis nec lacus non, ornare laoreet lacus.</p>
-                <button onclick="window.location.href='products.html';">SHOP</button>
+                <button onclick="window.location.href='products.php';">SHOP</button>
             </article>
         </div>
         <div class="right-container">
@@ -44,7 +46,7 @@
             <div class="mobile">
                 <article>
                     <h1 class="mobile" id="text">Revolutionary protein for working out</h1>
-                    <button onmousedown="window.location.href='products.html'; console.log('kas')">SHOP</button>
+                    <button onmousedown="window.location.href='products.php'; console.log('kas')">SHOP</button>
                 </article>
             </div>
         </div>
