about us page added

--- a/about.html
+++ b/about.html
@@ -10,24 +10,48 @@
     </head>
     <body>
         <header>
-            <nav>
-                <input type="checkbox" id="check">    
-                <label for="check">
-                    <i class="fas fa-bars" id="btn"></i>
-                </label>
-                <a href="index.html">
-                    <img src="fotos/fitpointer_logo.jpg" class="logo" onclick="window.loaction.href='index.html';">
-                </a>
-                <ul>
-                    <li><a href="products.php" class="item">Products</a></li>
-                    <li><a href="contact.html" class="item">Contact</a></li>
-                    <li><a href="about.html" class = "item">About us</a></li>
-                </ul>
-                <div class="icontainer">
-                    <img src="fotos/shopping_cart_icon.png" class="icons">
-                    <img src="fotos/user_icon.png" class="icons">
-                </div>
-            </nav>
+            <div class="navbar">
+                <nav>
+                    <input type="checkbox" id="check">    
+                    <label for="check">
+                        <i class="fas fa-bars" id="btn"></i>
+                    </label>
+                    <a href="index.html">
+                        <img src="fotos/fitpointer_logo.jpg" class="logo" onclick="window.loaction.href='index.html';">
+                    </a>
+                    <ul>
+                        <li><a href="products.php" class="item">Products</a></li>
+                        <li><a href="contact.html" class="item">Contact</a></li>
+                        <li><a href="about.html" class = "item">About us</a></li>
+                    </ul>
+                    <div class="icontainer">
+                        <img src="fotos/shopping_cart_icon.png" class="icons">
+                        <img src="fotos/user_icon.png" class="icons">
+                    </div>
+                </nav>
+            </div>
     </header>
+    <div>
+        <img src="fotos/placeholder.jpg" class="groupimg">
+    </div>
+    <div class="textcontainer">
+        <h1>
+            We are Fitpointer.
+        </h1>
+        <div class="textainer">
+            <p>
+                We are a revolutionary supplements brand and we care about the health of our customers.
+                We serve high-protein products of only <span>AA-grade quality</span> made in Holland. 
+                Our team consists of 3 super motivated students on a mission to improve sports perfomance all around the world.
+                Our products are <span>100% eco friendly</span> produced inside our own factories all around the Netherlands.
+                Founded in 2023 Fitpointer is on it's way to become the <span>#1 Brand</span> in Europe. 
+            </p>
+        </div>
+    </div>
+    <div class="socials">
+        <img src="fotos/icons8-instagram-48.png" class="socialicons">
+        <img src="fotos/icons8-github-48.png" class="socialicons">
+        <img src="fotos/icons8-twitter-48.png" class="socialicons">
+    </div>
     </body>
 </html>
