--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </a>
                 <ul>
                     <li><a href="products.php" class="item">Products</a></li>
-                    <li><a href="about.html" class="item">Contact</a></li>
-                    <li><a href="contact.html" class = "item">About us</a></li>
+                    <li><a href="contact.html" class="item">Contact</a></li>
+                    <li><a href="about.html" class = "item">About us</a></li>
                 </ul>
                 <div class="icontainer">
                     <img src="fotos/shopping_cart_icon.png" class="icons">
@@ -46,7 +46,7 @@
             <div class="mobile">
                 <article>
                     <h1 class="mobile" id="text">Revolutionary protein for working out</h1>
-                    <button onmousedown="window.location.href='products.php'; console.log('kas')">SHOP</button>
+                    <button onmousedown="window.location.href='products.php';">SHOP</button>
                 </article>
             </div>
         </div>
