new file structure

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                     <label for="check">
                         <i class="fas fa-bars" id="btn"></i>
                     </label>
-                    <a href="index.html">
+                    <a href="index.php">
                         <img src="fotos/fitpointer_logo.jpg" class="logo" onclick="window.loaction.href='index.html';">
                     </a>
                     <ul>
