about us page picture

--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
                 </nav>
             </div>
     </header>
-    <div>
-        <img src="fotos/placeholder.jpg" class="groupimg">
+    <div class="imagecontainer">
+        <img src="fotos/aboutuspage.png" class="groupimg">
     </div>
     <div class="textcontainer">
         <h1>
@@ -43,7 +43,7 @@
                 We are a revolutionary supplements brand and we care about the health of our customers.
                 We serve high-protein products of only <span>AA-grade quality</span> made in Holland. 
                 Our team consists of 3 super motivated students on a mission to improve sports perfomance all around the world.
-                Our products are <span>100% eco friendly</span> produced inside our own factories all around the Netherlands.
+                Our products are <span>100% eco-friendly</span> produced inside our own factories all around the Netherlands.
                 Founded in 2023 Fitpointer is on it's way to become the <span>#1 Brand</span> in Europe. 
             </p>
         </div>
